doc: authorized requests in swagger ui
